@@ -69,7 +69,7 @@ public class StudentImpl implements StudentService {
                     student.setGender(request.getGender());
                     return student;
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         // Save all the students at once using saveAll
         List<Student> savedStudents = studentRepository.saveAll(students);
@@ -117,7 +117,6 @@ public class StudentImpl implements StudentService {
         );
         student.setName(studentUpdateRequest.getName());
         student.setDateOfBirth(studentUpdateRequest.getDateOfBirth());
-        student.setAge(studentUpdateRequest.getAge());
         student.setGender(studentUpdateRequest.getGender());
         return new StudentResponse(studentRepository.save(student));
     }
@@ -172,7 +171,7 @@ public class StudentImpl implements StudentService {
                     Object[] firstRow = group.get(0); // Get the first row for static data
                     List<GameResponse> games = group.stream()
                             .map(row -> new GameResponse((String) row[13], (BigDecimal) row[14])) // map to GameResponse
-                            .collect(Collectors.toList());
+                            .toList();
 
                     return new StudentCompleteDataResponse(
                             (String) firstRow[0], // roll number
@@ -191,7 +190,7 @@ public class StudentImpl implements StudentService {
                             games // games (physical tests)
                     );
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
 
